bluesky/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bluesky
  name: bluesky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bluesky
  template:
    metadata:
      labels:
        app: bluesky
    spec:
      containers:
        - image: ghcr.io/bluesky-social/pds:0.4.67
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: http-node
              scheme: HTTP
          name: pds
          ports:
            - containerPort: 3000
              name: http-node
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http-node
              scheme: HTTP
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: bluesky-volume
              mountPath: /pds
      volumes:
        - name: bluesky-volume
          persistentVolumeClaim:
            claimName: bluesky
---
apiVersion: v1
kind: Service
metadata:
  name: bluesky
spec:
  ports:
    - name: http-web
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: bluesky
